ZH-CN XML assets from LSO

--- a/l10n/ses/zh-cn/xml/admin_about.xml
+++ b/l10n/ses/zh-cn/xml/admin_about.xml
@@ -152,7 +152,7 @@
      <term>管理节点</term>
      <listitem>
       <para>
-       <emphasis>管理节点</emphasis>是您在其中运行相应命令来管理集群的一种 Ceph 集群节点。管理节点是 Ceph 集群的中心点，因为它管理着集群的其余节点，它会查询这些节点的 Salt Minion 服务并向其发出指示。
+       <emphasis>管理节点</emphasis>是您在其中运行相应命令来管理集群的一种 Ceph 集群节点。管理节点是 Ceph 集群的中心点，因为它管理着集群的其余节点，它会查询这些节点的 Salt 受控端服务并向其发出指示。
       </para>
      </listitem>
     </varlistentry>
