--- a/l10n/ses/zh-cn/xml/admin_ceph_gateway.xml
+++ b/l10n/ses/zh-cn/xml/admin_ceph_gateway.xml
@@ -111,7 +111,7 @@
    <sect3 xml:id="ogw-s3-interface-access">
     <title>S3 接口访问</title>
     <para>
-     要访问 S3 接口，需要一个 REST 客户端。<command>S3cmd</command> 是一个命令行 S3 客户端。您可以在 <link xlink:href="https://build.opensuse.org/package/show/Cloud:Tools/s3cmd">OpenSUSE Build Service</link> 中找到它。该储存库包含既适用于 SUSE Linux Enterprise 发行套件又适用于基于 openSUSE 的发行套件的版本。
+     要访问 S3 接口，需要一个 REST 客户端。<command>S3cmd</command> 是一个命令行 S3 客户端。您可以在 <link xlink:href="https://build.opensuse.org/package/show/Cloud:Tools/s3cmd">OpenSUSE Build Service</link> 中找到它。该软件源包含既适用于 SUSE Linux Enterprise 发行套件又适用于基于 openSUSE 的发行套件的版本。
     </para>
     <para>
      如果您想测试自己是否能够访问 S3 接口，也可以编写一个简短的 Python 脚本。该脚本将连接到对象网关，创建新存储桶，并列出所有存储桶。<option>aws_access_key_id</option> 和 <option>aws_secret_access_key</option> 的值取自<xref linkend="adding-s3-swift-users"/>中所述 <command>radosgw_admin</command> 命令返回的 <option>access_key</option> 和 <option>secret_key</option> 的值。
@@ -167,7 +167,7 @@ for bucket in conn.get_all_buckets():
      要通过 Swift 接口访问对象网关，需要使用 <command>swift</command> 命令行客户端。该接口的手册页 <command>man 1 swift</command> 介绍了有关其命令行选项的详细信息。
     </para>
     <para>
-     从 SUSE Linux Enterprise 12 SP3 到 SUSE Linux Enterprise 15 的“Public Cloud”扩展模块中都随附了该软件包。在安装该软件包之前，需要激活该扩展模块并刷新软件储存库：
+     从 SUSE Linux Enterprise 12 SP3 到 SUSE Linux Enterprise 15 的“Public Cloud”扩展模块中都随附了该软件包。在安装该软件包之前，需要激活该扩展模块并刷新软件源：
     </para>
 <screen><prompt role="root"># </prompt>SUSEConnect -p sle-module-public-cloud/12/<replaceable>SYSTEM-ARCH</replaceable>
 sudo zypper refresh</screen>
@@ -457,7 +457,7 @@ sudo zypper refresh</screen>
     </para>
    </tip>
    <para>
-    以下过程说明如何在 Salt Master 上生成自我签名的 SSL 证书。
+    以下过程说明如何在 Salt 主控端上生成自我签名的 SSL 证书。
    </para>
    <procedure>
     <step>
