--- a/l10n/ses/zh-cn/xml/admin_ceph_upgrade.xml
+++ b/l10n/ses/zh-cn/xml/admin_ceph_upgrade.xml
@@ -68,7 +68,7 @@
    <itemizedlist>
     <listitem>
      <para>
-      <emphasis>阅读发行说明</emphasis>.在发行说明中，可以找到更多有关自 SUSE Enterprise Storage 的上一个版本发行后所进行的更改的信息。检查发行说明以了解：
+      <emphasis>阅读发行说明</emphasis>。在发行说明中，可以找到更多有关自 SUSE Enterprise Storage 的上一个版本发行后所进行的更改的信息。检查发行说明以了解：
      </para>
      <itemizedlist>
       <listitem>
@@ -94,7 +94,7 @@
       您可以在 <link xlink:href="https://www.suse.com/releasenotes/"/> 上找到联机 SES 7.1 发行说明。
      </para>
      <para>
-      此外，安装 SES 7.1 储存库中的 <package>release-notes-ses</package> 软件包之后，可在本地的 <filename>/usr/share/doc/release-notes</filename> 目录中或 <link xlink:href="https://www.suse.com/releasenotes/"/> 网页上找到发行说明。
+      此外，安装 SES 7.1 软件源中的 <package>release-notes-ses</package> 软件包之后，可在本地的 <filename>/usr/share/doc/release-notes</filename> 目录中或 <link xlink:href="https://www.suse.com/releasenotes/"/> 网页上找到发行说明。
      </para>
     </listitem>
     <listitem>
@@ -109,7 +109,7 @@
     </listitem>
     <listitem>
      <para>
-      您需要先升级 Salt Master，然后将 DeepSea 替换为 <systemitem class="resource">ceph-salt</systemitem> 和 cephadm。至少要等到所有 Ceph Manager 节点都升级后，您<emphasis>才能</emphasis>开始使用 cephadm orchestrator 模块。
+      您需要先升级 Salt 主控端，然后将 DeepSea 替换为 <systemitem class="resource">ceph-salt</systemitem> 和 cephadm。至少要等到所有 Ceph Manager 节点都升级后，您<emphasis>才能</emphasis>开始使用 cephadm orchestrator 模块。
      </para>
     </listitem>
     <listitem>
@@ -176,11 +176,11 @@
 <screen><prompt role="root"># </prompt>zypper refresh &amp;&amp; zypper patch</screen>
    <tip>
     <para>
-     有关更新群集节点的详细信息，请参见 <link xlink:href="https://documentation.suse.com/ses/6/html/ses-all/storage-salt-cluster.html#deepsea-rolling-updates"/>。
+     有关更新集群节点的详细信息，请参见 <link xlink:href="https://documentation.suse.com/ses/6/html/ses-all/storage-salt-cluster.html#deepsea-rolling-updates"/>。
     </para>
    </tip>
    <para>
-    应用更新后，重启动 Salt Master，同步新 Salt 模块，然后检查集群健康状况：
+    应用更新后，重启动 Salt 主控端，同步新 Salt 模块，然后检查集群健康状况：
    </para>
 <screen>
 <prompt>root@master # </prompt>systemctl restart salt-master.service
@@ -208,17 +208,17 @@
   </sect2>
 
   <sect2 xml:id="verify-previous-upgrade-patch-repos">
-   <title>确认对软件储存库和容器映像的访问权限</title>
+   <title>确认对软件源和容器映像的访问权限</title>
    <para>
-    确认是否每个集群节点都能访问 SUSE Linux Enterprise Server 15 SP3 和 SUSE Enterprise Storage 7.1 软件储存库以及容器映像注册表。
+    确认是否每个集群节点都能访问 SUSE Linux Enterprise Server 15 SP3 和 SUSE Enterprise Storage 7.1 软件源以及容器映像注册表。
    </para>
    <sect3 xml:id="verify-previous-upgrade-patch-repos-repos">
-    <title>软件储存库</title>
+    <title>软件源</title>
     <para>
      如果所有节点都已在 SCC 中注册，您便可以使用 <command>zypper migration</command> 命令进行升级。有关更多详细信息，请参见 <link xlink:href="https://documentation.suse.com/sles/15-SP3/html/SLES-all/cha-upgrade-online.html#sec-upgrade-online-zypper"/>。
     </para>
     <para>
-     如果节点<emphasis role="bold">未</emphasis>在 SCC 中注册，请禁用所有现有软件储存库，并为以下每个扩展添加 <literal>Pool</literal> 和 <literal>Updates</literal> 储存库：
+     如果节点<emphasis role="bold">未</emphasis>在 SCC 中注册，请禁用所有现有软件源，并为以下每个扩展添加 <literal>Pool</literal> 和 <literal>Updates</literal> 软件源：
     </para>
     <itemizedlist>
      <listitem>
@@ -282,10 +282,10 @@
   </sect2>
  </sect1>
  <sect1 xml:id="upgrade-salt-master">
-  <title>升级 Salt Master</title>
+  <title>升级 Salt 主控端</title>
 
   <para>
-   以下过程描述了升级 Salt Master 的过程：
+   以下过程描述了升级 Salt 主控端的过程：
   </para>
 
   <procedure>
@@ -301,7 +301,7 @@
      </listitem>
      <listitem>
       <para>
-       对于节点具有手动指定软件储存库的集群，请运行 <command>zypper dup</command>，然后再运行 <command>reboot</command>。
+       对于节点具有手动指定软件源的集群，请运行 <command>zypper dup</command>，然后再运行 <command>reboot</command>。
       </para>
      </listitem>
     </itemizedlist>
@@ -438,22 +438,22 @@ ID   CLASS  WEIGHT   TYPE NAME       STATUS  REWEIGHT  PRI-AFF
      </listitem>
      <listitem>
       <para>
-       如果集群的节点具有手动指定的软件储存库，请运行 <command>zypper dup</command>，然后再运行 <command>reboot</command>。
+       如果集群的节点具有手动指定的软件源，请运行 <command>zypper dup</command>，然后再运行 <command>reboot</command>。
       </para>
      </listitem>
     </itemizedlist>
    </step>
    <step>
     <para>
-     重引导节点后，通过在 Salt Master 上运行以下命令，将该节点上所有现有 MON、MGR 和 OSD 守护进程进行容器化：
+     重引导节点后，通过在 Salt 主控端上运行以下命令，将该节点上所有现有 MON、MGR 和 OSD 守护进程进行容器化：
     </para>
 <screen><prompt>root@master # </prompt>salt <replaceable>MINION_ID</replaceable> state.apply ceph.upgrade.ses7.adopt</screen>
     <para>
-     将 <replaceable>MINION_ID</replaceable> 替换为您要升级的 Minion 的 ID。您可以通过在 Salt Master 上运行 <command>salt-key -L</command> 命令来获取 Minion ID 的列表。
+     将 <replaceable>MINION_ID</replaceable> 替换为您要升级的受控端的 ID。您可以通过在 Salt 主控端上运行 <command>salt-key -L</command> 命令来获取受控端 ID 的列表。
     </para>
     <tip>
      <para>
-      要查看<emphasis>采用</emphasis>的状态和进度，请检查 Ceph Dashboard 或在 Salt Master 上运行下面其中一个命令：
+      要查看<emphasis>采用</emphasis>的状态和进度，请检查 Ceph Dashboard 或在 Salt 主控端上运行下面其中一个命令：
      </para>
 <screen>
 <prompt>root@master # </prompt>ceph status
@@ -485,13 +485,13 @@ ID   CLASS  WEIGHT   TYPE NAME       STATUS  REWEIGHT  PRI-AFF
    </listitem>
    <listitem>
     <para>
-     如果集群的节点具有手动指定的软件储存库，请运行 <command>zypper dup</command>，然后再运行 <command>reboot</command> 命令。
+     如果集群的节点具有手动指定的软件源，请运行 <command>zypper dup</command>，然后再运行 <command>reboot</command> 命令。
     </para>
    </listitem>
   </itemizedlist>
 
   <para>
-   此步骤也适用于属于集群但尚未指定任何角色的任何节点（如有疑问，请查看通过 <command>salt-key -L</command> 命令提供的 Salt Master 上的主机列表，并将其与 <command>salt-run upgrade.status</command> 命令的输出进行比较）。
+   此步骤也适用于属于集群但尚未指定任何角色的任何节点（如有疑问，请查看通过 <command>salt-key -L</command> 命令提供的 Salt 主控端上的主机列表，并将其与 <command>salt-run upgrade.status</command> 命令的输出进行比较）。
   </para>
 
   <para>
@@ -520,7 +520,7 @@ ID   CLASS  WEIGHT   TYPE NAME       STATUS  REWEIGHT  PRI-AFF
   <procedure>
    <step>
     <para>
-     删除 DeepSea 创建的 <literal>rbd_exporter</literal> 和 <literal>rgw_exporter</literal> 定时任务 (cron job)。在 Salt Master 上，以 <systemitem class="username">root</systemitem> 身份运行 <command>crontab -e</command> 命令以编辑 crontab。删除下列项目（如果存在）：
+     删除 DeepSea 创建的 <literal>rbd_exporter</literal> 和 <literal>rgw_exporter</literal> 定时任务 (cron job)。在 Salt 主控端上，以 <systemitem class="username">root</systemitem> 身份运行 <command>crontab -e</command> 命令以编辑 crontab。删除下列项目（如果存在）：
     </para>
 <screen>
 # SALT_CRON_IDENTIFIER:deepsea rbd_exporter cron job
@@ -542,7 +542,7 @@ ID   CLASS  WEIGHT   TYPE NAME       STATUS  REWEIGHT  PRI-AFF
    </step>
    <step>
     <para>
-     卸装 DeepSea，并在 Salt Master 上安装 <systemitem class="resource">ceph-salt</systemitem>：
+     卸装 DeepSea，并在 Salt 主控端上安装 <systemitem class="resource">ceph-salt</systemitem>：
     </para>
 <screen>
 <prompt>root@master # </prompt>zypper remove 'deepsea*'
@@ -551,7 +551,7 @@ ID   CLASS  WEIGHT   TYPE NAME       STATUS  REWEIGHT  PRI-AFF
    </step>
    <step>
     <para>
-     重启动 Salt Master 并同步 Salt 模块：
+     重启动 Salt 主控端并同步 Salt 模块：
     </para>
 <screen>
 <prompt>root@master # </prompt>systemctl restart salt-master.service
@@ -627,7 +627,7 @@ ID   CLASS  WEIGHT   TYPE NAME       STATUS  REWEIGHT  PRI-AFF
    </step>
    <step>
     <para>
-     在运行 Prometheus、Grafana 和告警管理器（默认为 Salt Master）的节点上，运行以下命令：
+     在运行 Prometheus、Grafana 和告警管理器（默认为 Salt 主控端）的节点上，运行以下命令：
     </para>
 <screen>
 <prompt>cephuser@adm &gt; </prompt>cephadm adopt --style=legacy --name prometheus.$(hostname)
