--- a/l10n/ses/zh-cn/xml/admin_ds_backup.xml
+++ b/l10n/ses/zh-cn/xml/admin_ds_backup.xml
@@ -30,15 +30,15 @@
   <sect2 xml:id="sec-deployment-backup-salt">
    <title>备份 Salt 配置</title>
    <para>
-    您需要备份 <filename>/etc/salt/</filename> 目录。该目录包含 Salt 配置文件，例如 Salt Master 密钥和已接受的客户端密钥。
+    您需要备份 <filename>/etc/salt/</filename> 目录。该目录包含 Salt 配置文件，例如 Salt 主控端密钥和已接受的客户端密钥。
    </para>
    <para>
-    从严格意义上来说，备份管理节点并不需要备份 Salt 文件，但这些文件能够简化 Salt 集群的重新部署。如果不备份这些文件，就需要在新管理节点上重新注册 Salt Minion。
+    从严格意义上来说，备份管理节点并不需要备份 Salt 文件，但这些文件能够简化 Salt 集群的重新部署。如果不备份这些文件，就需要在新管理节点上重新注册 Salt 受控端。
    </para>
    <note>
-    <title>Salt Master 私用密钥的安全性</title>
+    <title>Salt 主控端私用密钥的安全性</title>
     <para>
-     务必将 Salt Master 私用密钥的备份存储在安全位置。Salt Master 密钥可用于操纵所有集群节点。
+     务必将 Salt 主控端私用密钥的备份存储在安全位置。Salt 主控端密钥可用于操纵所有集群节点。
     </para>
    </note>
   </sect2>
@@ -97,7 +97,7 @@
   </para>
 
   <para>
-   对于 Minion，通常更容易简化重构建和重新部署。
+   对于受控端 ，通常更容易简化重构建和重新部署。
   </para>
 
   <orderedlist>
@@ -124,7 +124,7 @@
    </listitem>
    <listitem>
     <para>
-     从所有 Minion 中删除旧 Salt Master 节点的公共 Master 密钥。
+     从所有受控端中删除旧 Salt 主控端节点的公共主控端密钥。
     </para>
 <screen>
 <prompt>root@master # </prompt><command>rm</command> /etc/salt/pki/minion/minion_master.pub
