--- a/l10n/ses/zh-cn/xml/admin_nfsganesha.xml
+++ b/l10n/ses/zh-cn/xml/admin_nfsganesha.xml
@@ -75,7 +75,7 @@
 
   <important>
    <para>
-    启动 NFS Ganesha 服务不会自动导出 CephFS 文件系统。要导出 CephFS 文件系统，请长假导出配置文件。有关更多详细信息，请参见 <xref linkend="ceph-nfsganesha-create-export"/>。
+    启动 NFS Ganesha 服务不会自动导出 CephFS 文件系统。要导出 CephFS 文件系统，请长假导出配置文件。有关更多详细信息，请参见<xref linkend="ceph-nfsganesha-create-export"/>。
    </para>
   </important>
 
@@ -114,7 +114,7 @@
   <title>创建 NFS 导出</title>
 
   <para>
-   您可以在 Ceph Dashboard 中创建 NFS 导出，也可以在命令行上手动创建。要使用 Ceph Dashboard 创建 NFS 导出，请参见<xref linkend="dash-webui-nfs"/>，更具体地说，请参见<xref linkend="dash-webui-nfs-create"/>。
+   您可以在 Ceph Dashboard 中创建 NFS 导出，也可以在命令行上手动创建。要使用 Ceph Dashboard 创建 NFS 导出，请参见<xref linkend="dash-webui-nfs"/>，具体而言，请参见<xref linkend="dash-webui-nfs-create"/>。
   </para>
 
   <para>
