--- a/l10n/ses/zh-cn/xml/admin_rbd.xml
+++ b/l10n/ses/zh-cn/xml/admin_rbd.xml
@@ -1258,7 +1258,7 @@ SCHEDULE TIME       IMAGE
   <title>预读设置</title>
 
   <para>
-   RADOS 块设备支持预读/预提取功能，以优化小块的顺序读取。如果使用虚拟机，此操作通常应由 guest 操作系统处理，但引导加载程序可能不会发出有效的读请求。如果禁用缓存，则会自动禁用预读功能。
+   RADOS 块设备支持预读/预提取功能，以优化小块的顺序读取。如果使用虚拟机，此操作通常应由 guest 操作系统处理，但引导加载器可能不会发出有效的读请求。如果禁用缓存，则会自动禁用预读功能。
   </para>
 
   <important>
