--- a/l10n/ses/zh-cn/xml/admin_saltcluster.xml
+++ b/l10n/ses/zh-cn/xml/admin_saltcluster.xml
@@ -49,7 +49,7 @@
    </step>
    <step>
     <para>
-     将主机配置为已存在 Salt Master 的 Salt Minion。有关更多信息，请参考<xref linkend="deploy-salt"/>。
+     将主机配置为已存在 Salt 主控端的 Salt 受控端。有关更多信息，请参考<xref linkend="deploy-salt"/>。
     </para>
    </step>
    <step>
@@ -164,14 +164,14 @@ placement:
    </step>
    <step>
     <para>
-     从您要删除的 Minion 中删除所有角色：
+     从您要删除的受控端中删除所有角色：
     </para>
 <screen><prompt>cephuser@adm &gt; </prompt>ceph-salt config /ceph_cluster/roles/tuned/throughput remove ses-min2
 <prompt>cephuser@adm &gt; </prompt>ceph-salt config /ceph_cluster/roles/tuned/latency remove ses-min2
 <prompt>cephuser@adm &gt; </prompt>ceph-salt config /ceph_cluster/roles/cephadm remove ses-min2
 <prompt>cephuser@adm &gt; </prompt>ceph-salt config /ceph_cluster/roles/admin remove ses-min2</screen>
     <para>
-     如果您要删除的 Minion 是引导 Minion，则还需要删除引导角色：
+     如果您要删除的受控端是引导受控端 ，则还需要删除引导角色：
     </para>
 <screen><prompt>cephuser@adm &gt; </prompt>ceph-salt config /ceph_cluster/roles/bootstrap reset</screen>
    </step>
@@ -188,7 +188,7 @@ placement:
    </step>
    <step>
     <para>
-     现在您便可以从集群中删除 Minion：
+     现在您便可以从集群中删除受控端 ：
     </para>
 <screen><prompt>cephuser@adm &gt; </prompt>ceph-salt config /ceph_cluster/minions remove ses-min2</screen>
    </step>
@@ -196,7 +196,7 @@ placement:
 
   <important>
    <para>
-    如果发生故障，并且您尝试删除的 Minion 处于永久断电状态，则需要从 Salt Master 中删除节点：
+    如果发生故障，并且您尝试删除的受控端处于永久断电状态，则需要从 Salt 主控端中删除节点：
    </para>
 <screen><prompt>root@master # </prompt>salt-key -d <replaceable>minion_id</replaceable></screen>
    <para>
@@ -1122,10 +1122,10 @@ OSD_ID  HOST         STATE                    PG_COUNT  REPLACE  FORCE  STARTED_
   </sect2>
  </sect1>
  <sect1 xml:id="moving-saltmaster">
-  <title>将 Salt Master 移至新节点</title>
+  <title>将 Salt 主控端移至新节点</title>
 
   <para>
-   如果需要用新 Salt Master 主机替换 Salt Master 主机，请执行以下步骤：
+   如果需要用新 Salt 主控端主机替换 Salt 主控端主机，请执行以下步骤：
   </para>
 
   <procedure>
@@ -1136,12 +1136,12 @@ OSD_ID  HOST         STATE                    PG_COUNT  REPLACE  FORCE  STARTED_
    </step>
    <step>
     <para>
-     如果旧的 Salt Master 也是集群中的唯一管理节点，则需要将 <filename>/etc/ceph/ceph.client.admin.keyring</filename> 和 <filename>/etc/ceph/ceph.conf</filename> 手动移至新的 Salt Master。
+     如果旧的 Salt 主控端也是集群中的唯一管理节点，则需要将 <filename>/etc/ceph/ceph.client.admin.keyring</filename> 和 <filename>/etc/ceph/ceph.conf</filename> 手动移至新的 Salt 主控端。
     </para>
    </step>
    <step>
     <para>
-     停止并禁用旧的 Salt Master 节点上的 Salt Master <systemitem class="daemon">systemd</systemitem> 服务：
+     停止并禁用旧的 Salt 主控端节点上的 Salt 主控端 <systemitem class="daemon">systemd</systemitem> 服务：
     </para>
 <screen>
 <prompt>root@master # </prompt>systemctl stop salt-master.service
@@ -1150,7 +1150,7 @@ OSD_ID  HOST         STATE                    PG_COUNT  REPLACE  FORCE  STARTED_
    </step>
    <step>
     <para>
-     如果旧的 Salt Master 节点不再位于集群中，还要停止并禁用 Salt Minion <systemitem class="daemon">systemd</systemitem> 服务：
+     如果旧的 Salt 主控端节点不再位于集群中，还要停止并禁用 Salt 受控端 <systemitem class="daemon">systemd</systemitem> 服务：
     </para>
 <screen>
 <prompt>root@master # </prompt>systemctl stop salt-minion.service
@@ -1158,18 +1158,18 @@ OSD_ID  HOST         STATE                    PG_COUNT  REPLACE  FORCE  STARTED_
 </screen>
     <warning>
      <para>
-      如果旧的 Salt Master 节点上有任何正在运行的 Ceph 守护进程（MON、MGR、OSD、MDS、网关、监控），请不要停止或禁用 <literal>salt-minion.service</literal>。
+      如果旧的 Salt 主控端节点上有任何正在运行的 Ceph 守护进程（MON、MGR、OSD、MDS、网关、监控），请不要停止或禁用 <literal>salt-minion.service</literal>。
      </para>
     </warning>
    </step>
    <step>
     <para>
-     按照<xref linkend="deploy-sles"/>中所述的过程在新的 Salt Master 上安装 SUSE Linux Enterprise Server 15 SP3。
+     按照<xref linkend="deploy-sles"/>中所述的过程在新的 Salt 主控端上安装 SUSE Linux Enterprise Server 15 SP3。
     </para>
     <tip>
-     <title>转换 Salt Minion</title>
+     <title>转换 Salt 受控端</title>
      <para>
-      为便于将 Salt Minion 转换为新的 Salt Master，请从每个 Salt Minion 中删除原来的 Salt Master 的公共密钥：
+      为便于将 Salt 受控端转换为新的 Salt 主控端，请从每个 Salt 受控端中删除原来的 Salt 主控端的公共密钥：
      </para>
 <screen>
 <prompt>root@minion &gt; </prompt>rm /etc/salt/pki/minion/minion_master.pub
@@ -1179,12 +1179,12 @@ OSD_ID  HOST         STATE                    PG_COUNT  REPLACE  FORCE  STARTED_
    </step>
    <step>
     <para>
-     在新的 Salt Master 上安装 <package>salt-master</package> 软件包和 <package>salt-minion</package> 软件包（如果适用）。
+     在新的 Salt 主控端上安装 <package>salt-master</package> 软件包和 <package>salt-minion</package> 软件包（如果适用）。
     </para>
    </step>
    <step>
     <para>
-     在新的 Salt Master 节点上安装 <systemitem class="resource">ceph-salt</systemitem>：
+     在新的 Salt 主控端节点上安装 <systemitem class="resource">ceph-salt</systemitem>：
     </para>
 <screen>
 <prompt>root@master # </prompt>zypper install ceph-salt
@@ -1199,7 +1199,7 @@ OSD_ID  HOST         STATE                    PG_COUNT  REPLACE  FORCE  STARTED_
    </step>
    <step>
     <para>
-     在集群中包含新的 Salt Master，如<xref linkend="deploy-cephadm-cephsalt"/>、<xref linkend="deploy-cephadm-configure-minions"/>和<xref linkend="deploy-cephadm-configure-admin"/>中所述。
+     在集群中包含新的 Salt 主控端，如<xref linkend="deploy-cephadm-cephsalt"/>、<xref linkend="deploy-cephadm-configure-minions"/>和<xref linkend="deploy-cephadm-configure-admin"/>中所述。
     </para>
    </step>
    <step>
@@ -1212,7 +1212,7 @@ OSD_ID  HOST         STATE                    PG_COUNT  REPLACE  FORCE  STARTED_
 </screen>
     <important>
      <para>
-      导入之前，请在导出的 <filename><replaceable>CLUSTER_CONFIG</replaceable>.json</filename> 文件中重命名 Salt Master 的 <literal>minion id</literal>。
+      导入之前，请在导出的 <filename><replaceable>CLUSTER_CONFIG</replaceable>.json</filename> 文件中重命名 Salt 主控端的 <literal>minion id</literal>。
      </para>
     </important>
    </step>
@@ -1226,16 +1226,16 @@ OSD_ID  HOST         STATE                    PG_COUNT  REPLACE  FORCE  STARTED_
   </para>
 
   <sect2 xml:id="rolling-updates-repos">
-   <title>软件储存库</title>
+   <title>软件源</title>
    <para>
-    使用最新的软件包增补集群之前，请确认集群的所有节点均可访问相关的储存库。有关所需储存库的完整列表，请参见<xref linkend="verify-previous-upgrade-patch-repos-repos"/>。
+    使用最新的软件包增补集群之前，请确认集群的所有节点均可访问相关的软件源。有关所需软件源的完整列表，请参见<xref linkend="verify-previous-upgrade-patch-repos-repos"/>。
    </para>
   </sect2>
 
   <sect2 xml:id="rolling-upgrades-staging">
-   <title>储存库暂存</title>
+   <title>软件源暂存</title>
    <para>
-    如果您使用向集群节点提供软件储存库的暂存工具（例如 SUSE Manager、订阅管理工具或 RMT），请确认 SUSE Linux Enterprise Server 和 SUSE Enterprise Storage 的“更新”储存库的阶段都是在同一时刻创建的。
+    如果您使用向集群节点提供软件源的暂存工具（例如 SUSE Manager、订阅管理工具或 RMT），请确认 SUSE Linux Enterprise Server 和 SUSE Enterprise Storage 的“更新”软件源的阶段都是在同一时刻创建的。
    </para>
    <para>
     强烈建议您使用暂存工具来应用补丁级别为 <literal>frozen</literal> 或 <literal>staged</literal> 的补丁。这样可确保加入集群的新节点具有与已在集群中运行的节点相同的补丁级别。通过这种方法，您无需向集群的所有节点都应用最新补丁，新节点也能加入集群。
