--- a/l10n/ses/zh-cn/xml/common_intro_feedback.xml
+++ b/l10n/ses/zh-cn/xml/common_intro_feedback.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<sect1 xmlns="http://docbook.org/ns/docbook" xmlns:xi="http://www.w3.org/2001/XInclude" xmlns:xlink="http://www.w3.org/1999/xlink" xml:base="common_intro_feedback.xml" xml:lang="zh-cn" version="5.1">
+<sect1 xmlns="http://docbook.org/ns/docbook" xmlns:xi="http://www.w3.org/2001/XInclude" xmlns:xlink="http://www.w3.org/1999/xlink" xml:base="common_intro_feedback.xml" xml:lang="en" version="5.1">
  <title>提供反馈</title>
 
  <info>
@@ -42,7 +42,7 @@
      要帮助改进本文档，请使用本文档 HTML 版本中的标题旁边的<guimenu>编辑源代码</guimenu>链接。这些链接会将您转到 GitHub 上的源代码，在其中可以创建拉取请求。参与贡献需要 GitHub 帐户。
     </para>
     <para>
-     有关本文档使用的文档环境的详细信息，请参见储存库的 README（网址：<link xlink:href="https://github.com/SUSE/doc-ses"/>）。
+     有关本文档使用的文档环境的详细信息，请参见软件源的 README（网址：<link xlink:href="https://github.com/SUSE/doc-ses"/>）。
     </para>
    </listitem>
   </varlistentry>
