--- a/l10n/ses/zh-cn/xml/common_intro_prompts.xml
+++ b/l10n/ses/zh-cn/xml/common_intro_prompts.xml
@@ -16,7 +16,7 @@
  <sect2>
   <title>与 Salt 相关的命令</title>
   <para>
-   这些命令可帮助您部署 Ceph 集群节点、同时在数个（或所有）集群节点上运行命令，或在您添加或删除集群节点时为您提供协助。最常用的命令是 <command>ceph-salt</command> 和 <command>ceph-salt config</command>。您需要以 <systemitem class="username">root</systemitem> 身份在 Salt Master 节点上运行 Salt 命令。通过以下提示符来引入这些命令：
+   这些命令可帮助您部署 Ceph 集群节点、同时在数个（或所有）集群节点上运行命令，或在您添加或删除集群节点时为您提供协助。最常用的命令是 <command>ceph-salt</command> 和 <command>ceph-salt config</command>。您需要以 <systemitem class="username">root</systemitem> 身份在 Salt 主控端节点上运行 Salt 命令。通过以下提示符来引入这些命令：
   </para>
 <screen>
 <prompt>root@master # </prompt>
