--- a/l10n/ses/zh-cn/xml/dashboard_rbds.xml
+++ b/l10n/ses/zh-cn/xml/dashboard_rbds.xml
@@ -401,7 +401,7 @@ EOF
      </figure>
      <variablelist>
       <varlistentry>
-       <term><guimenu>群集名称</guimenu></term>
+       <term><guimenu>集群名称</guimenu></term>
        <listitem>
         <para>
          用于识别主集群的任意唯一字符串，如“primary”。该集群名称不得与实际环境中次集群的名称相同。
