--- a/l10n/ses/zh-cn/xml/dashboard_webui.xml
+++ b/l10n/ses/zh-cn/xml/dashboard_webui.xml
@@ -48,7 +48,7 @@
 
   <important>
    <para>
-    一旦可以升级到新的 Ceph 主要版本（代码名称：Pacific），Ceph Dashboard 就会在顶部通知区域显示相关讯息。要执行升级，请按照<xref linkend="upgrade-to-pacific"/>中的说明操作。
+    一旦可以升级到新的 Ceph 主要版本（代码名称：Pacific），Ceph Dashboard 就会在顶部通知区域显示相关消息。要执行升级，请按照<xref linkend="upgrade-to-pacific"/>中的说明操作。
    </para>
    <figure>
     <title>关于新 SUSE Enterprise Storage 版本的通知</title>
@@ -128,7 +128,7 @@
 
   <variablelist>
    <varlistentry>
-    <term><guimenu>操作板</guimenu></term>
+    <term><guimenu>仪表盘</guimenu></term>
     <listitem>
      <para>
       返回 Ceph Dashboard 首页。
@@ -136,7 +136,7 @@
     </listitem>
    </varlistentry>
    <varlistentry>
-    <term><guimenu>群集</guimenu></term>
+    <term><guimenu>集群</guimenu></term>
     <listitem>
      <para>
       查看有关主机、库存、Ceph Monitor、服务、Ceph OSD、集群配置、CRUSH 索引、Ceph Manager 模块、日志和监控的详细信息。
@@ -152,7 +152,7 @@
     </listitem>
    </varlistentry>
    <varlistentry>
-    <term><guimenu>拦截</guimenu></term>
+    <term><guimenu>块设备</guimenu></term>
     <listitem>
      <para>
       查看详细信息并管理 RADOS 块设备映像、镜像和 iSCSI。
@@ -173,7 +173,7 @@
     </listitem>
    </varlistentry>
    <varlistentry>
-    <term><guimenu>Filesystems</guimenu></term>
+    <term><guimenu>文件系统</guimenu></term>
     <listitem>
      <para>
       查看并管理 CephFS。
@@ -328,7 +328,7 @@
      </listitem>
     </varlistentry>
     <varlistentry>
-     <term><guimenu>管理员</guimenu></term>
+     <term><guimenu>Manager</guimenu></term>
      <listitem>
       <para>
        显示处于活跃和待机状态的 Ceph Manager 守护进程的数量。
@@ -467,7 +467,7 @@
      <term><guimenu>洗刷</guimenu></term>
      <listitem>
       <para>
-       显示洗刷（参见<xref linkend="op-pg-scrubpg"/>）状态。其状态可以是 <option>inactive</option>、<option>enabled</option> 或 <option>active</option>。
+       显示洗刷（参见<xref linkend="op-pg-scrubpg"/>）状态。其状态可以是<option>非活跃</option>、<option>已启用</option>或<option>活跃</option>。
       </para>
      </listitem>
     </varlistentry>
