--- a/l10n/ses/zh-cn/xml/deploy_bootstrap.xml
+++ b/l10n/ses/zh-cn/xml/deploy_bootstrap.xml
@@ -14,17 +14,17 @@
   <title>安装 <systemitem class="resource">ceph-salt</systemitem></title>
 
   <para>
-   <systemitem class="resource">ceph-salt</systemitem> 提供了用于部署由 cephadm 管理的 Ceph 集群的工具。<systemitem class="resource">ceph-salt</systemitem> 使用 Salt 基础结构来执行操作系统管理（例如，软件更新或时间同步），并为 Salt Minion 定义角色。
+   <systemitem class="resource">ceph-salt</systemitem> 提供了用于部署由 cephadm 管理的 Ceph 集群的工具。<systemitem class="resource">ceph-salt</systemitem> 使用 Salt 基础结构来执行操作系统管理（例如，软件更新或时间同步），并为 Salt 受控端定义角色。
   </para>
 
   <para>
-   在 Salt Master 上安装 <package>ceph-salt</package> 软件包：
+   在 Salt 主控端上安装 <package>ceph-salt</package> 软件包：
   </para>
 
 <screen><prompt>root@master # </prompt>zypper install ceph-salt</screen>
 
   <para>
-   上面的命令将 <package>ceph-salt-formula</package> 安装为依赖项，它通过在 <filename>/etc/salt/master.d</filename> 目录中插入额外的文件修改了 Salt Master 配置。要应用更改，请重启动 <systemitem class="daemon">salt-master.service</systemitem> 并同步 Salt 模块：
+   上面的命令将 <package>ceph-salt-formula</package> 安装为依赖项，它通过在 <filename>/etc/salt/master.d</filename> 目录中插入额外的文件修改了 Salt 主控端配置。要应用更改，请重启动 <systemitem class="daemon">salt-master.service</systemitem> 并同步 Salt 模块：
   </para>
 
 <screen>
@@ -128,7 +128,7 @@ o- dashboard ....................................................... [...]
    <tip>
     <title>自动完成配置代码段</title>
     <para>
-     在 <systemitem class="resource">ceph-salt</systemitem> 外壳中，您可以使用类似于常规 Linux 外壳 (Bash) 自动完成的自动完成功能。它可以完成配置路径、子命令或 Salt Minion 名称。自动完成配置路径时，可使用以下两个选项：
+     在 <systemitem class="resource">ceph-salt</systemitem> 外壳中，您可以使用类似于常规 Linux 外壳 (Bash) 自动完成的自动完成功能。它可以完成配置路径、子命令或 Salt 受控端名称。自动完成配置路径时，可使用以下两个选项：
     </para>
     <itemizedlist>
      <listitem>
@@ -159,13 +159,13 @@ o- dashboard ....................................................... [...]
   </sect2>
 
   <sect2 xml:id="deploy-cephadm-configure-minions">
-   <title>添加 Salt Minion</title>
+   <title>添加 Salt 受控端</title>
    <para>
-    将我们在<xref linkend="deploy-salt"/>中部署并接受的所有或部分 Salt Minion 包含到 Ceph 集群配置中。您可以通过全名指定 Salt Minion，也可以使用 glob 表达式“*”和“？”一次包含多个 Salt Minion。在 <literal>/ceph_cluster/minions</literal> 路径下使用 <command>add</command> 子命令。以下命令包含所有已接受 Salt Minion：
+    将我们在<xref linkend="deploy-salt"/>中部署并接受的所有或部分 Salt 受控端包含到 Ceph 集群配置中。您可以通过全名指定 Salt 受控端，也可以使用 glob 表达式“*”和“？”一次包含多个 Salt 受控端。在 <literal>/ceph_cluster/minions</literal> 路径下使用 <command>add</command> 子命令。以下命令包含所有已接受 Salt 受控端：
    </para>
 <screen><prompt>root@master # </prompt>ceph-salt config /ceph_cluster/minions add '*'</screen>
    <para>
-    确认是否添加了指定的 Salt Minion：
+    确认是否添加了指定的 Salt 受控端：
    </para>
 <screen>
 <prompt>root@master # </prompt>ceph-salt config /ceph_cluster/minions ls
@@ -179,7 +179,7 @@ o- minions ................................................. [Minions: 5]
   </sect2>
 
   <sect2 xml:id="deploy-cephadm-configure-cephadm">
-   <title>指定由 cephadm 管理的 Salt Minion</title>
+   <title>指定由 cephadm 管理的 Salt 受控端</title>
    <para>
     指定哪些节点将属于 Ceph 集群并由 cephadm 管理。包含将运行 Ceph 服务的所有节点以及管理节点：
    </para>
@@ -192,12 +192,12 @@ o- minions ................................................. [Minions: 5]
     管理节点是安装 <filename>ceph.conf</filename> 配置文件和 Ceph 管理密钥环的节点。通常在管理节点上运行与 Ceph 相关的命令。
    </para>
    <tip>
-    <title>Salt Master 和管理节点位于同一节点</title>
+    <title>Salt 主控端和管理节点位于同一节点</title>
     <para>
-     在所有或大多数主机都属于 SUSE Enterprise Storage 的同类环境中，建议将管理节点和 Salt Master 置于同一主机。
+     在所有或大多数主机都属于 SUSE Enterprise Storage 的同类环境中，建议将管理节点和 Salt 主控端置于同一主机。
     </para>
     <para>
-     而对于一个 Salt 基础结构托管多个集群（例如 SUSE Enterprise Storage 和 SUSE Manager）的异构环境，请<emphasis>勿</emphasis>将管理节点和 Salt Master 置于同一主机。
+     而对于一个 Salt 基础结构托管多个集群（例如 SUSE Enterprise Storage 和 SUSE Manager）的异构环境，请<emphasis>勿</emphasis>将管理节点和 Salt 主控端置于同一主机。
     </para>
    </tip>
    <para>
@@ -221,7 +221,7 @@ o- admin ................................................... [Minions: 1]
   <sect2 xml:id="deploy-cephadm-configure-mon">
    <title>指定第一个 MON/MGR 节点</title>
    <para>
-    您需要指定将要引导集群的集群 Salt Minion。此 Minion 将成为第一个运行 Ceph Monitor 和 Ceph Manager 服务的 Minion。
+    您需要指定将要引导集群的集群 Salt 受控端。此受控端将成为第一个运行 Ceph Monitor 和 Ceph Manager 服务的受控端 。
    </para>
 <screen>
 <prompt>root@master # </prompt>ceph-salt config /ceph_cluster/roles/bootstrap set ses-min1.example.com
@@ -240,11 +240,11 @@ o- bootstrap ..................................... [ses-min1.example.com]
   <sect2 xml:id="deploy-cephadm-tuned-profiles">
    <title>指定调整的配置</title>
    <para>
-    您需要指定集群的哪些 Minion 具有主动调整的配置。为此，请使用以下命令显式添加这些角色：
+    您需要指定集群的哪些受控端具有主动调整的配置。为此，请使用以下命令显式添加这些角色：
    </para>
    <note>
     <para>
-     一个 Minion 不能同时拥有 <literal>latency</literal> 和 <literal>throughput</literal> 角色。
+     一个受控端不能同时拥有 <literal>latency</literal> 和 <literal>throughput</literal> 角色。
     </para>
    </note>
 <screen>
@@ -299,7 +299,7 @@ o- ssh .................................................. [Key Pair set]
     </listitem>
     <listitem>
      <para>
-      另外，<systemitem class="resource">ceph-salt</systemitem> 可以配置一个 Salt Minion 来充当集群其余 Minion 的时间服务器。有时，它被称为“内部时间服务器”。在此方案中，<systemitem class="resource">ceph-salt</systemitem> 将配置内部时间服务器（应为其中一个 Salt Minion）以使其时间与外部时间服务器（例如 <literal>pool.ntp.org</literal>）同步，并将所有其他 Minion 配置为从内部时间服务器获取时间。可以通过以下命令来实现：
+      另外，<systemitem class="resource">ceph-salt</systemitem> 可以配置一个 Salt 受控端来充当集群其余受控端的时间服务器。有时，它被称为“内部时间服务器”。在此方案中，<systemitem class="resource">ceph-salt</systemitem> 将配置内部时间服务器（应为其中一个 Salt 受控端）以使其时间与外部时间服务器（例如 <literal>pool.ntp.org</literal>）同步，并将所有其他受控端配置为从内部时间服务器获取时间。可以通过以下命令来实现：
      </para>
 <screen>
 <prompt>root@master # </prompt>ceph-salt config /time_server/servers add ses-master.example.com
@@ -538,7 +538,7 @@ podman run --name myregistry -p <option>REG_HOST_PORT</option>:5000 \
      </step>
      <step>
       <para>
-       创建本地注册表后，需要将 <literal>registry.suse.com</literal> 上官方 SUSE 注册表中的容器映像同步到本地注册表。可以使用 <package>skopeo</package> 软件包中的 <command>skopeo sync</command> 命令来实现此目的。有关详细信息，请参见手册页 (<command>man 1 skopeo-sync</command>)。考虑下列例子：
+       创建本地注册表后，需要将 <literal>registry.suse.com</literal> 上官方 SUSE 注册表中的容器映像同步到本地注册表。可以使用 <package>skopeo</package> 软件包中的 <command>skopeo sync</command> 命令来实现此目的。有关详细信息，请参见手册页 (<command>man 1 skopeo-sync</command>)。考虑下列示例：
       </para>
       <example>
        <title>查看清单文件</title>
@@ -911,7 +911,7 @@ config: OK
 
   <important>
    <para>
-    永远不会通过 <command>ceph-salt update --reboot</command> 或 <command>ceph-salt reboot</command> 命令重引导 Salt Master。如果 Salt Master 需要重引导，您需要手动进行重引导。
+    永远不会通过 <command>ceph-salt update --reboot</command> 或 <command>ceph-salt reboot</command> 命令重引导 Salt 主控端。如果 Salt 主控端需要重引导，您需要手动进行重引导。
    </para>
   </important>
 
@@ -928,7 +928,7 @@ config: OK
   </note>
 
   <para>
-   以上命令将打开一个交互式用户界面，其中会显示每个 Minion 的当前进度。
+   以上命令将打开一个交互式用户界面，其中会显示每个受控端的当前进度。
   </para>
 
   <figure>
@@ -955,7 +955,7 @@ config: OK
   <title>查看最后的步骤</title>
 
   <para>
-   在 <command>ceph-salt apply</command> 命令完成后，您便应该会有一个 Ceph Monitor 和一个 Ceph Manager。您应该能够在任何以 <literal>root</literal> 身份或使用 <literal>sudo</literal> 的 <literal>cephadm</literal> 用户身份被授予 <literal>admin</literal> 角色的 Minion 上成功运行 <command>ceph status</command> 命令。
+   在 <command>ceph-salt apply</command> 命令完成后，您便应该会有一个 Ceph Monitor 和一个 Ceph Manager。您应该能够在任何以 <literal>root</literal> 身份或使用 <literal>sudo</literal> 的 <literal>cephadm</literal> 用户身份被授予 <literal>admin</literal> 角色的受控端上成功运行 <command>ceph status</command> 命令。
   </para>
 
   <para>
