--- a/l10n/ses/zh-cn/xml/deploy_sles.xml
+++ b/l10n/ses/zh-cn/xml/deploy_sles.xml
@@ -10,7 +10,7 @@
  <procedure>
   <step>
    <para>
-    在每个集群节点上安装并注册 SUSE Linux Enterprise Server 15 SP3。在安装 SUSE Enterprise Storage 期间，需要访问更新储存库，因此必须注册。至少包含以下模块：
+    在每个集群节点上安装并注册 SUSE Linux Enterprise Server 15 SP3。在安装 SUSE Enterprise Storage 期间，需要访问更新软件源，因此必须注册。至少包含以下模块：
    </para>
    <itemizedlist>
     <listitem>
