--- a/l10n/ses/zh-cn/xml/deployment_admin_ha.xml
+++ b/l10n/ses/zh-cn/xml/deployment_admin_ha.xml
@@ -8,7 +8,7 @@
   </dm:docmanager>
  </info>
  <para>
-  <emphasis>管理节点</emphasis>是运行 Salt Master 服务的 Ceph 集群节点。它管理着集群的其余节点，它会查询这些节点的 Salt Minion 服务并向其发出指示。它通常也会包含其他服务，例如 <emphasis>Grafana</emphasis> 仪表盘（由 <emphasis>Prometheus</emphasis> 监控工具包提供支持）。
+  <emphasis>管理节点</emphasis>是运行 Salt 主控端服务的 Ceph 集群节点。它管理着集群的其余节点，它会查询这些节点的 Salt 受控端服务并向其发出指示。它通常也会包含其他服务，例如 <emphasis>Grafana</emphasis> 仪表盘（由 <emphasis>Prometheus</emphasis> 监控工具包提供支持）。
  </para>
  <para>
   如果管理节点发生故障，通常需要为该节点提供新的工作硬件，并通过最近的备份恢复完整的集群配置堆栈。这种方法很费时，并会导致集群故障。
