--- a/l10n/ses/zh-cn/xml/deployment_cifs.xml
+++ b/l10n/ses/zh-cn/xml/deployment_cifs.xml
@@ -195,7 +195,7 @@
     </step>
     <step>
      <para>
-      SLE-HA 设置需要一个隔离设备，以避免在活动集群节点变为未同步时出现<emphasis>节点分裂</emphasis>情况。为此，您可以将 Ceph RBD 映像与 Stonith 块设备 (SBD) 搭配使用。有关更多详细信息，请参见 <link xlink:href="https://documentation.suse.com/sle-ha/15-SP1/single-html/SLE-HA-guide/#sec-ha-storage-protect-fencing-setup"/>。
+      SLE-HA 设置需要一个隔离设备，以避免在活动集群节点变为未同步时出现<emphasis>节点分裂</emphasis>情况。为此，您可以将 Ceph RBD 映像与 Stonith 块设备 (SBD) 搭配使用。有关更多详细信息，请参见<link xlink:href="https://documentation.suse.com/sle-ha/15-SP1/single-html/SLE-HA-guide/#sec-ha-storage-protect-fencing-setup"/>。
      </para>
      <para>
       如果该映像尚不存在，则创建一个名为 <literal>rbd</literal> 的 RBD 存储池（参见<xref linkend="ceph-pools-operate-add-pool"/>），并将其与 <literal>rbd</literal> 相关联（参见<xref linkend="ceph-pools-associate"/>）。然后创建一个名为 <literal>sbd01</literal> 的相关 RBD 映像：
@@ -232,7 +232,7 @@
       </step>
       <step>
        <para>
-        在所有节点上打开防火墙的端口 <literal>4379</literal>。这是为了使 CTDB 能够与其他群集节点通讯。
+        在所有节点上打开防火墙的端口 <literal>4379</literal>。这是为了使 CTDB 能够与其他集群节点通讯。
        </para>
       </step>
      </substeps>
@@ -392,7 +392,7 @@ Full list of resources:
     </step>
     <step>
      <para>
-      添加群集 IP 地址：
+      添加集群 IP 地址：
      </para>
 <screen><prompt>crm(live)configure# </prompt><command>primitive</command> ip ocf:heartbeat:IPaddr2
     params ip=192.168.2.1 \
