--- a/l10n/ses/zh-cn/xml/deployment_hwrecommend.xml
+++ b/l10n/ses/zh-cn/xml/deployment_hwrecommend.xml
@@ -103,7 +103,7 @@
       <para>
        重启动 OSD 以绑定到指定的集群网络：
       </para>
-<screen><prompt role="root"># </prompt>systemctl restart ceph-*@osd&#x002E;*&#x002E;service</screen>
+<screen><prompt role="root"># </prompt>systemctl restart ceph-*@osd&period;*&period;service</screen>
      </step>
      <step>
       <para>
@@ -182,7 +182,7 @@
    <itemizedlist mark="bullet" spacing="normal">
     <listitem>
      <para>
-      具有 4 GB RAM、四个内核和 1 TB 存储容量的独立管理节点。通常是 Salt Master 节点。Ceph 服务和网关（例如 Ceph Monitor、元数据服务器、Ceph OSD、对象网关或 NFS Ganesha）在管理节点上不受支持，因为它需要独立地编制集群更新和升级过程。
+      具有 4 GB RAM、四个内核和 1 TB 存储容量的独立管理节点。通常是 Salt 主控端节点。Ceph 服务和网关（例如 Ceph Monitor、元数据服务器、Ceph OSD、对象网关或 NFS Ganesha）在管理节点上不受支持，因为它需要独立地编制集群更新和升级过程。
      </para>
     </listitem>
     <listitem>
@@ -607,7 +607,7 @@
   <title>管理节点</title>
 
   <para>
-   至少需要 4 GB RAM 和四核 CPU。其中包括在管理节点上运行 Salt Master。对于包含数百个节点的大型集群，建议提供 6 GB RAM。
+   至少需要 4 GB RAM 和四核 CPU。其中包括在管理节点上运行 Salt 主控端。对于包含数百个节点的大型集群，建议提供 6 GB RAM。
   </para>
  </sect1>
  <sect1 xml:id="sysreq-iscsi">
