--- a/l10n/ses/zh-cn/xml/upgrade-to-pacific.xml
+++ b/l10n/ses/zh-cn/xml/upgrade-to-pacific.xml
@@ -40,7 +40,7 @@
    <itemizedlist>
     <listitem>
      <para>
-      <emphasis>阅读发行说明</emphasis>.在发行说明中，可以找到更多有关自 SUSE Enterprise Storage 的上一个版本发行后所进行的更改的信息。检查发行说明以了解：
+      <emphasis>阅读发行说明</emphasis>。在发行说明中，可以找到更多有关自 SUSE Enterprise Storage 的上一个版本发行后所进行的更改的信息。检查发行说明以了解：
      </para>
      <itemizedlist>
       <listitem>
@@ -66,7 +66,7 @@
       您可以在 <link xlink:href="https://www.suse.com/releasenotes/"/> 上找到联机 SES 7.1 发行说明。
      </para>
      <para>
-      此外，安装 SES 7.1 储存库中的 <package>release-notes-ses</package> 软件包之后，可在本地的 <filename>/usr/share/doc/release-notes</filename> 目录中或 <link xlink:href="https://www.suse.com/releasenotes/"/> 网页上找到发行说明。
+      此外，安装 SES 7.1 软件源中的 <package>release-notes-ses</package> 软件包之后，可在本地的 <filename>/usr/share/doc/release-notes</filename> 目录中或 <link xlink:href="https://www.suse.com/releasenotes/"/> 网页上找到发行说明。
      </para>
     </listitem>
     <listitem>
@@ -85,17 +85,17 @@
   </sect2>
 
   <sect2 xml:id="verify-previous-upgrade-patch-repos-7p">
-   <title>确认对软件储存库和容器映像的访问权限</title>
+   <title>确认对软件源和容器映像的访问权限</title>
    <para>
-    确认是否每个集群节点都能访问 SUSE Linux Enterprise Server 15 SP3 和 SUSE Enterprise Storage 7.1 软件储存库以及容器映像注册表。
+    确认是否每个集群节点都能访问 SUSE Linux Enterprise Server 15 SP3 和 SUSE Enterprise Storage 7.1 软件源以及容器映像注册表。
    </para>
    <sect3 xml:id="verify-previous-upgrade-patch-repos-repos-7p">
-    <title>软件储存库</title>
+    <title>软件源</title>
     <para>
-     如果所有节点都已在 SCC 中注册，您便可以使用 <command>zypper migration</command> 命令进行升级。有关更多详细信息，请参见 <link xlink:href="https://documentation.suse.com/sles/15-SP3/html/SLES-all/cha-upgrade-online.html#sec-upgrade-online-zypper"/>。
+     如果所有节点都已在 SCC 中注册，您便可以使用 <command>zypper migration</command> 命令进行升级。有关更多详细信息，请参见<link xlink:href="https://documentation.suse.com/sles/15-SP3/html/SLES-all/cha-upgrade-online.html#sec-upgrade-online-zypper"/>。
     </para>
     <para>
-     如果节点<emphasis role="bold">未</emphasis>在 SCC 中注册，请禁用所有现有软件储存库，并为以下每个扩展添加 <literal>Pool</literal> 和 <literal>Updates</literal> 储存库：
+     如果节点<emphasis role="bold">未</emphasis>在 SCC 中注册，请禁用所有现有软件源，并为以下每个扩展添加 <literal>Pool</literal> 和 <literal>Updates</literal> 软件源：
     </para>
     <itemizedlist>
      <listitem>
@@ -166,7 +166,7 @@
   </para>
 
   <para>
-   如果集群节点的软件储存库是手动配置的，则需要手动升级节点。
+   如果集群节点的软件源是手动配置的，则需要手动升级节点。
   </para>
 
   <para>
