--- a/l10n/ses/zh-cn/xml/common_intro_support.xml
+++ b/l10n/ses/zh-cn/xml/common_intro_support.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<sect1 xmlns="http://docbook.org/ns/docbook" xmlns:xi="http://www.w3.org/2001/XInclude" xmlns:xlink="http://www.w3.org/1999/xlink" xml:base="common_intro_support.xml" xml:lang="zh-cn" version="5.1">
+<sect1 xmlns="http://docbook.org/ns/docbook" xmlns:xi="http://www.w3.org/2001/XInclude" xmlns:xlink="http://www.w3.org/1999/xlink" xml:base="common_intro_support.xml" xml:lang="en" version="5.1">
  <title>支持</title>
 
  <info>
@@ -9,7 +9,7 @@
  </info>
 
  <para>
-  下面提供了 SUSE Enterprise Storage 的支持声明和有关技术预览的一般信息。有关产品生命周期的细节，请参见<link xlink:href="https://www.suse.com/lifecycle"/>。
+  下面提供了 SUSE Enterprise Storage 的支持声明和有关技术预览的一般信息。有关产品生命周期的细节，请参见 <link xlink:href="https://www.suse.com/lifecycle"/>。
  </para>
  <para>
   如果您有权获享支持，可在 <link xlink:href="https://documentation.suse.com/sles-15/html/SLES-all/cha-adm-support.html"/> 中查找有关如何收集支持票据所需信息的细节。
