--- a/l10n/ses/zh-cn/xml/deploy_salt.xml
+++ b/l10n/ses/zh-cn/xml/deploy_salt.xml
@@ -8,17 +8,17 @@
   </dm:docmanager>
  </info>
  <para>
-  SUSE Enterprise Storage 使用 Salt 和 <systemitem class="resource">ceph-salt</systemitem> 进行初始集群准备。Salt 可帮助您从一个名为 <emphasis>Salt Master</emphasis> 的专用主机同时针对多个集群节点配置和运行命令。在部署 Salt 之前，请考虑以下要点：
+  SUSE Enterprise Storage 使用 Salt 和 <systemitem class="resource">ceph-salt</systemitem> 进行初始集群准备。Salt 可帮助您从一个名为 <emphasis>Salt 主控端</emphasis>的专用主机同时针对多个集群节点配置和运行命令。在部署 Salt 之前，请考虑以下要点：
  </para>
  <itemizedlist>
   <listitem>
    <para>
-    <emphasis>Salt Minion</emphasis> 是由一个名为 Salt Master 的专用节点控制的节点。
+    <emphasis>Salt 受控端</emphasis>是由一个名为 Salt 主控端的专用节点控制的节点。
    </para>
   </listitem>
   <listitem>
    <para>
-    如果 Salt Master 主机应属于 Ceph 集群的一部分，则它需要运行自己的 Salt Minion，但这不是必须的。
+    如果 Salt 主控端主机应属于 Ceph 集群的一部分，则它需要运行自己的 Salt 受控端，但这不是必须的。
    </para>
    <tip>
     <title>每台服务器共享多个角色</title>
@@ -29,14 +29,14 @@
   </listitem>
   <listitem>
    <para>
-    Salt Minion 需要能通过网络正确解析 Salt Master 的主机名。默认情况下，Minion 会查找 <systemitem>salt</systemitem> 主机名，但您可以在 <filename>/etc/salt/minion</filename> 文件中指定可通过网络访问的任何其他主机名。
+    Salt 受控端需要能通过网络正确解析 Salt 主控端的主机名。默认情况下，受控端 会查找 <systemitem>salt</systemitem> 主机名，但您可以在 <filename>/etc/salt/minion</filename> 文件中指定可通过网络访问的任何其他主机名。
    </para>
   </listitem>
  </itemizedlist>
  <procedure>
   <step>
    <para>
-    在 Salt Master 节点上安装 <literal>salt-master</literal>：
+    在 Salt 主控端节点上安装 <literal>salt-master</literal>：
    </para>
 <screen><prompt>root@master # </prompt>zypper in salt-master</screen>
   </step>
@@ -49,12 +49,12 @@
   </step>
   <step>
    <para>
-    如果要使用防火墙，请确认 Salt Master 节点是否为所有 Salt Minion 节点打开了端口 4505 和 4506。如果这些端口处于关闭状态，可以使用 <command>yast2 firewall</command> 命令并通过允许相应区域的 <guimenu>salt-master</guimenu> 服务来打开这些端口。例如，<literal>public</literal>。
+    如果要使用防火墙，请确认 Salt 主控端节点是否为所有 Salt 受控端节点打开了端口 4505 和 4506。如果这些端口处于关闭状态，可以使用 <command>yast2 firewall</command> 命令并通过允许相应区域的 <guimenu>salt-master</guimenu> 服务来打开这些端口。例如，<literal>public</literal>。
    </para>
   </step>
   <step>
    <para>
-    在所有 Minion 节点上安装 <literal>salt-minion</literal> 软件包。
+    在所有受控端节点上安装 <literal>salt-minion</literal> 软件包。
    </para>
 <screen><prompt>root@minion &gt; </prompt>zypper in salt-minion</screen>
   </step>
@@ -74,7 +74,7 @@
    </note>
    <note>
     <para>
-     请务必更改<emphasis>所有</emphasis>集群 (Minion) 节点上的日志级别。
+     请务必更改<emphasis>所有</emphasis>集群（受控端）节点上的日志级别。
     </para>
    </note>
   </step>
@@ -85,11 +85,11 @@
   </step>
   <step>
    <para>
-    将所有 Minion 配置为连接到 Master。如果无法通过主机名 <literal>salt</literal> 访问 Salt Master，请编辑文件 <filename>/etc/salt/minion</filename>，或创建包含以下内容的新文件 <filename>/etc/salt/minion.d/master.conf</filename>：
+    将所有受控端配置为连接到主控端。如果无法通过主机名 <literal>salt</literal> 访问 Salt 主控端，请编辑文件 <filename>/etc/salt/minion</filename>，或创建包含以下内容的新文件 <filename>/etc/salt/minion.d/master.conf</filename>：
    </para>
 <screen>master: <replaceable>host_name_of_salt_master</replaceable></screen>
    <para>
-    如果对上述配置文件执行了任何更改，请在所有相关的 Salt Minion 上重启动 Salt 服务：
+    如果对上述配置文件执行了任何更改，请在所有相关的 Salt 受控端上重启动 Salt 服务：
    </para>
 <screen><prompt>root@minion &gt; </prompt>systemctl restart salt-minion.service</screen>
   </step>
@@ -102,21 +102,21 @@
   </step>
   <step>
    <para>
-    确认每个 Salt Minion 的指纹，如果指纹匹配，则接受 Salt Master 上的所有 Salt 密钥。
+    确认每个 Salt 受控端的指纹，如果指纹匹配，则接受 Salt 主控端上的所有 Salt 密钥。
    </para>
    <note>
     <para>
-     如果 Salt Minion 指纹返回空白，请确保 Salt Minion 具有 Salt Master 配置且可与 Salt Master 通讯。
+     如果 Salt 受控端指纹返回空白，请确保 Salt 受控端具有 Salt 主控端配置且可与 Salt 主控端通讯。
     </para>
    </note>
    <para>
-    查看每个 Minion 的指纹：
+    查看每个受控端的指纹：
    </para>
 <screen><prompt>root@minion &gt; </prompt>salt-call --local key.finger
 local:
 3f:a3:2f:3f:b4:d3:d9:24:49:ca:6b:2c:e1:6c:3f:c3:83:37:f0:aa:87:42:e8:ff...</screen>
    <para>
-    收集到所有 Salt Minion 的指纹后，将列出 Salt Master 上所有未接受 Minion 密钥的指纹：
+    收集到所有 Salt 受控端的指纹后，将列出 Salt 主控端上所有未接受受控端密钥的指纹：
    </para>
 <screen><prompt>root@master # </prompt>salt-key -F
 [...]
@@ -124,7 +124,7 @@ Unaccepted Keys:
 minion1:
 3f:a3:2f:3f:b4:d3:d9:24:49:ca:6b:2c:e1:6c:3f:c3:83:37:f0:aa:87:42:e8:ff...</screen>
    <para>
-    如果 Minion 的指纹匹配，则接受这些密钥：
+    如果受控端的指纹匹配，则接受这些密钥：
    </para>
 <screen><prompt>root@master # </prompt>salt-key --accept-all</screen>
   </step>
@@ -136,7 +136,7 @@ minion1:
   </step>
   <step>
    <para>
-    测试是否所有 Salt Minion 都响应：
+    测试是否所有 Salt 受控端都响应：
    </para>
 <screen><prompt>root@master # </prompt>salt-run manage.status</screen>
   </step>
